# Home-Automator

./: CMakeLists.txt  homeAutomator.cbp  homeAutomator.layout
examples/: DAC_OFF.out  DAC_ON.out  READ_ADC.out  a.out  i2c_DAC_OFF.cpp  i2c_DAC_ON.cpp  i2c_READ_ADC.cpp
include/: ADC.h  DAC.h  PID.h  PT1000.h  SSR.h  i2c.h
src/: ADC.cpp  DAC.cpp  PID.cpp  PT1000.cpp  SSR.cpp  i2c.cpp  main.cpp
